cabal-version:   3.4
name:            tasty-report
version:         0.0.1.0
synopsis:
  A Tasty plugin that renders a personalised summary of your tests

-- description:
license:         BSD-3-Clause
license-file:    LICENSE
author:          Théophile Choutri
maintainer:      theophile@choutri.eu

-- copyright:
category:        Testing
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:  MyLib

  -- other-modules:
  -- other-extensions:
  build-depends:    base ^>=4.17.1.0
  hs-source-dirs:   src
  default-language: GHC2021

test-suite tasty-report-test
  import:           warnings
  default-language: GHC2021

  -- other-modules:
  -- other-extensions:
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base          ^>=4.17.1.0
    , tasty-report
